--- a/Quickpack.Api/appsettings.Development.json
+++ b/Quickpack.Api/appsettings.Development.json
@@ -1,8 +1,56 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "LogsFilePath": "",
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.Hosting.Lifetime": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs\\Quickpack.api.Log-.log",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [{ApplicationName}] [{RequestId}] {Message}{NewLine}{Exception}",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "ApplicationName": "Quickpack.api"
     }
+  },
+  "AllowedHosts": "*",
+  "ApplicationName": "Quickpack.api",
+  "ApplicationDisplayName": "Quickpack API",
+  "ApplicationId": "A4211326-0BAB-473F-AFF6-3544B6629AA0",
+  "LongRequestTimeMilliseconds": 3000,
+  "SlidingExpirationCacheTimeSeconds": 3600,
+  "GeneralErrorMessage": {
+    "Codigo": "000000",
+    "Descripcion": "Se ha producido un error inesperado al procesar su solicitud."
+  },
+  "MaximoDiasBuscar": 180,
+  "PageSizeExportar": 500,
+  "ArchivosPermitidos": ".jpeg,.png,.pdf,.doc,.docx",
+  "ArchivosPermitidosDocumentosAdjuntos": ".jpeg,.pdf",
+  "ConnectionStrings": {
+    "Quickpack": "Server=DESKTOP-OPKFGCA;Database=Quickpack;Integrated Security=True;Application Name=Quickpack.Api"
+  },
+  "JwtSettings": {
+    "Key": "WCM9K1M2&7g1O4bogUii$TYxWwTP@S*1",
+    "Issuer": "Quickpack.Api",
+    "ExpiresInSeconds": 3600,
+    "TokenType": "Bearer",
+    "EnableAudiences": true,
+    "ValidateAudience": false,
+    "Enabled": true
   }
 }
