--- a/Quickpack.Api/appsettings.Development.json
+++ b/Quickpack.Api/appsettings.Development.json
@@ -42,7 +42,7 @@
   "ArchivosPermitidos": ".jpeg,.png,.pdf,.doc,.docx",
   "ArchivosPermitidosDocumentosAdjuntos": ".jpeg,.pdf",
   "ConnectionStrings": {
-    "Quickpack": "Server=DESKTOP-OPKFGCA;Database=QuickpackPeru;Integrated Security=True;TrustServerCertificate=True;Application Name=Quickpack.Api"
+    "Quickpack": "Server=ALFIERY;Database=QuickpackPeru;Integrated Security=True;TrustServerCertificate=True;Application Name=Quickpack.Api"
   },
   "JwtSettings": {
     "Key": "WCM9K1M2&7g1O4bogUii$TYxWwTP@S*1",
