Corrrecion de datos sensibles

--- a/Quickpack.Api/appsettings.Development.json
+++ b/Quickpack.Api/appsettings.Development.json
@@ -31,18 +31,19 @@
   "ApplicationName": "Quickpack.api",
   "ApplicationDisplayName": "Quickpack API",
   "ApplicationId": "A4211326-0BAB-473F-AFF6-3544B6629AA0",
-  "LongRequestTimeMilliseconds": 3000,
-  "SlidingExpirationCacheTimeSeconds": 3600,
   "GeneralErrorMessage": {
     "Codigo": "000000",
     "Descripcion": "Se ha producido un error inesperado al procesar su solicitud."
   },
-  "MaximoDiasBuscar": 180,
-  "PageSizeExportar": 500,
-  "ArchivosPermitidos": ".jpeg,.png,.pdf,.doc,.docx",
-  "ArchivosPermitidosDocumentosAdjuntos": ".jpeg,.pdf",
   "ConnectionStrings": {
     "Quickpack": "Server=ALFIERY;Database=QuickpackPeru;Integrated Security=True;TrustServerCertificate=True;Application Name=Quickpack.Api"
+  },
+  "emealService": {
+    "smtp": "smtp.gmail.com",
+    "port": "587",
+    "sender": "quickpackredes@gmail.com",
+    "password": "clawkzaiicncqkdq",
+    "support": "info@quickpackperu.com"
   },
   "JwtSettings": {
     "Key": "WCM9K1M2&7g1O4bogUii$TYxWwTP@S*1",
